# impresso-text-acquisition

./: .gitignore  .gitmodules  .readthedocs.yaml  CONTRIBUTORS.txt  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  README_schemata.md  UploadToS3.ipynb  olive_importer.py  pyproject.toml  requirements.txt  scrapbook.ipynb  setup.py  tox.ini
.github/workflows/: python-publish.yml
bash_scripts/: docker_image.sh  example_config_rebuilt_runai.sh  fetch_BL_aliases.sh  start_rebuilt_runai.sh
docs/: architecture.rst  conf.py  custom_importer.rst  importers.rst  index.html  index.rst  install.rst  logic.rst  preprocessing.rst
docs/_build/html/: .buildinfo  (+14 more)
docs/importers/: bcul.rst  bl.rst  bnf-en.rst  bnf.rst  fedgaz.rst  lux.rst  mets-alto.rst  rero.rst  swa.rst  tetml.rst
notebooks/: BCUL.ipynb  bl_alias_and_reoganize.ipynb  canonical_patches_1_and_6.ipynb  compress_canonical.ipynb  first_rb_importer.ipynb  import_lux_data.ipynb  patch_7_find_titles.ipynb  scan_lux_data.ipynb  test_text_boxes.ipynb  test_text_boxes2.ipynb  test_text_boxes_rero2.ipynb
rebuilder_scripts/: example_config_rebuilt_runai.sh
tests/: conftest.py  test_importer.py  test_rebuilder.py  test_tokenization.py
tests/importers/: test_bcul_importer.py  test_bl_importer.py  test_bnf_en_importer.py  test_bnf_importer.py  test_kb_importer.py  test_lux_importer.py  test_olive_importer.py  test_onb_importer.py  test_rero_importer.py  test_swa_importer.py  test_tetml_importer.py
text_importer/: __init__.py  compress_canonical.py  helpers.py  helpers_old.py  import.py  importer.py  luximporter.py  olive_importer.py  oliveimporter.py  reroimporter.py  scrapbook.ipynb  tokenization.py  upload.py  utils.py
text_importer/config/: import_BCUL.json  import_IMP.json  import_KB.json  remaining-nps.json
text_importer/data/: LuxImportNotes.md
text_importer/importers/: __init__.py  classes.py  core.py  generic_importer.py  lux.py  olive.py  olive_old.py
text_importer/schemas/: article.schema  article.schema.old  issue.schema  page.schema
text_importer/scripts/: bculimporter.py  blimporter.py  bnfen_importer.py  bnfimporter.py  compress_canonical.py  fedgazimporter.py  oliveimporter.py  swaimporter.py  tetmlimporter.py  upload.py
text_importer/tests/: test_tokenization.py
text_preparation/: tokenization.py  utils.py
text_preparation/data/: LuxImportNotes.md
text_preparation/importer_scripts/: bculimporter.py  blimporter.py  bnfen_importer.py  bnfimporter.py  fedgazimporter.py  inaimporter.py  luximporter.py  oliveimporter.py  reroimporter.py  swaimporter.py  swissinfoimporter.py  tetmlimporter.py  upload.py
text_preparation/importers/: __init__.py  classes.py  core.py  detect.py  generic_importer.py
text_preparation/rebuilders/: audio_rebuilders.py  helpers.py  paper_rebuilders.py  rebuilder.py
tmp/GDL-1900-01-02-a/: 1-Ar00100.xml  1-Ar00108.xml  2-Ar00207.xml  3-Ar00300.xml  3-Ar00304.xml  3-Ar00306.xml  3-Ar00308.xml
tmp/GDL-1900-01-03-a/: 1-Ar00100.xml  1-Ar00101.xml  1-Ar00105.xml  2-Ar00205.xml  3-Ar00304.xml  3-Ar00306.xml  4-Ar00438.xml
tmp/GDL-1900-01-04-a/: 1-Ar00101.xml  1-Ar00105.xml  3-Ar00303.xml  3-Ar00305.xml  3-Ar00308.xml  3-Ar00309.xml  3-Ar00315.xml  4-Ar00404.xml  4-Ar00405.xml
(+1812 files in other folders)
