[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "impresso_text_preparation"
authors = [
    {name="Maud Ehrmann", email="maud.ehrmann@epfl.ch"},
    {name="Matteo Romanello", email="matteo.romanello@gmail.com"},
    {name="Pauline Conti", email="pauline.conti@epfl.ch"}
]
description = "Library to import newspaper data from a variety of OCR formats into Impresso's JSON format."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version","dependencies"]

[project.urls]
Homepage = "https://github.com/impresso/impresso-text-acquisition"
Documentaton = "https://impresso-text-importer.readthedocs.io/en/latest/index.html" 

[tool.setuptools.dynamic]
version = {attr = "text_preparation.__version__"}

[tool.setuptools.packages.find]
include = ["text_preparation*"]
namespaces = false

[tool.setuptools.package-data]
text_preparation = [
    "impresso-schemas/json/*/*.json",
    "impresso-schemas/docs/*/*.json",
    "impresso-schemas/*",
]

[project.scripts]
impresso-txt-importer = "text_preparation.importers.generic_importer:main"
impresso-rebuilder = "text_preparation.rebuilders.rebuilder:main"
